# vertrule-schemas

./: .gitignore  CAPABILITIES.md  Cargo.toml  LICENSE  PRE_RELEASE_CHECKLIST.md  PUBLIC_SURFACE.md  README.md  RELEASE.md  RELEASE_CONSTITUTION.md  justfile
.claude/: settings.json
.github/workflows/: ci.yml  no-attribution.yml
.vr/: README.md  local-ci.sh
.vr/governance/: known-nondeterminism.toml  manifest.toml
.vr/governance/authorities/: default.yaml
.vr/governance/bindings/: authority-set.json  policy-set.json
.vr/governance/policies/determinism@0.1/: policy.toml
.vr/receipts/: chain-manifest.json
docs/: MIGRATION_V1_TO_V2.md
governance/: known-nondeterminism.toml  manifest.toml
governance/authority-sets/: default.yaml
governance/policies/determinism@0.1/: policy.toml  scope.toml
governance/receipts/schema/: GovernanceReceipt.schema.json
src/: boundary_origin.rs  boundary_origin_tests.rs  canonical_payload.rs  canonical_payload_tests.rs  constants.rs  digest_bytes.rs  error.rs  jcs.rs  jcs_tests.rs  lib.rs  policy_id.rs  policy_id_tests.rs  rbh_invariant.rs  rbh_invariant_tests.rs  receipt_type.rs  receipt_type_tests.rs  schema_version.rs  vertrule-schemas.capability.yaml
src/common/: algorithms.rs  canonical_payload.rs  canonical_payload_tests.rs  digest_bytes.rs  digest_bytes_tests.rs  error.rs  i_json_uint.rs  i_json_uint_tests.rs  ids.rs  ids_tests.rs  mod.rs  schema_id.rs  schema_id_tests.rs  versions.rs  versions_tests.rs
src/context/: mod.rs  rbh_invariant.rs
src/governance/: action.rs  action_tests.rs  adapter.rs  adapter_tests.rs  binding.rs  binding_tests.rs  decision.rs  decision_tests.rs  mod.rs  scope.rs  scope_tests.rs  subject.rs  subject_tests.rs
src/mgs/: evidence.rs  mod.rs  transition.rs
src/mri/: batch_payload.rs  gradient_coupling.rs  mod.rs  reduction.rs
src/receipts/: boundary_origin.rs  boundary_origin_tests.rs  commitment.rs  commitment_tests.rs  envelope.rs  envelope_tests.rs  meta.rs  mod.rs  projection.rs  projection_tests.rs  receipt_type.rs  receipt_type_tests.rs
test-vectors/: digest_bytes_reject_chars_001.json  digest_bytes_reject_short_001.json  digest_bytes_valid_001.json  envelope_reject_missing_field_001.json  envelope_roundtrip_001.json  jcs_reject_duplicate_key_001.json  jcs_reject_noncharacter_001.json  jcs_rfc8785_primitives_001.json  jcs_roundtrip_001.json  jcs_shuffle_invariant_001.json  jcs_utf16_sort_001.json
tests/: determinism_tests.rs  public_surface.rs  test_vector_validation.rs
tests/common/: mod.rs
tooling/scripts/: check-no-attribution.sh  check-repo-state.sh  claude-determinism-hook.sh
