[package]
name = "vertrule-schemas"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
description = "Canonical schema types for the VertRule constitutional layer"
repository = "https://github.com/VertRule/vertrule-schemas"
keywords = ["receipts", "verification", "schemas", "canonical-json", "deterministic"]
categories = ["encoding", "data-structures"]
exclude = [
    ".claude/**",
    ".github/**",
    ".vr/**",
    "operator_private/**",
    "tooling/**",
    "justfile",
    "PUBLIC_SURFACE.md",
    "RELEASE.md",
]

[features]
default = []
governance-check = ["dep:toml"]

[[bin]]
name = "validate-governance-surface"
path = "src/bin/validate_governance_surface.rs"
required-features = ["governance-check"]

[dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
thiserror = "2"
toml = { version = "0.8", optional = true }
vr-jcs = "0.3"

[dev-dependencies]
anyhow = "1"

[lints.rust]
unsafe_code = "deny"
unused_extern_crates = "deny"
unreachable_pub = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
field_reassign_with_default = "warn"
float_arithmetic = "deny"
suboptimal_flops = "deny"
lossy_float_literal = "deny"
cast_precision_loss = "deny"
iter_not_returning_iterator = "deny"
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
dbg_macro = "deny"
todo = "deny"
use_self = "warn"
map_unwrap_or = "warn"
redundant_closure = "warn"
nonminimal_bool = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
must_use_candidate = "warn"
